--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "type": "pwa-node",
+            "type": "chrome",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\index.html",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "url": "http://localhost:5500",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
